@@ -2,38 +2,47 @@ package net.osmand.data;
 
 import android.content.Context;
 
+import androidx.annotation.DrawableRes;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
 import com.google.openlocationcode.OpenLocationCode;
 
 import net.osmand.LocationConvert;
-import net.osmand.plus.OsmAndFormatter;
+import net.osmand.PlatformUtil;
 import net.osmand.plus.OsmandApplication;
-import net.osmand.plus.settings.backend.OsmandSettings;
 import net.osmand.plus.R;
 import net.osmand.plus.activities.MapActivity;
+import net.osmand.plus.plugins.PluginsHelper;
+import net.osmand.plus.plugins.osmedit.OsmEditingPlugin;
+import net.osmand.plus.settings.backend.OsmandSettings;
+import net.osmand.plus.utils.OsmAndFormatter;
 import net.osmand.util.Algorithms;
+
+import org.apache.commons.logging.Log;
 
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 public class PointDescription {
+
+	private static final Log log = PlatformUtil.getLog(PointDescription.class);
+
 	private String type = "";
 	private String name = "";
 	private String typeName;
 	private String iconName;
 
-	private double lat = 0;
-	private double lon = 0;
+	private double lat;
+	private double lon;
 
 	public static final String POINT_TYPE_FAVORITE = "favorite";
 	public static final String POINT_TYPE_WPT = "wpt";
 	public static final String POINT_TYPE_GPX = "gpx";
-	public static final String POINT_TYPE_RTE = "rte";
+	public static final String POINT_TYPE_ROUTE = "route";
 	public static final String POINT_TYPE_POI = "poi";
 	public static final String POINT_TYPE_ADDRESS = "address";
-	public static final String POINT_TYPE_OSM_NOTE= "osm_note";
+	public static final String POINT_TYPE_OSM_NOTE = "osm_note";
 	public static final String POINT_TYPE_MARKER = "marker";
 	public static final String POINT_TYPE_PARKING_MARKER = "parking_marker";
 	public static final String POINT_TYPE_AUDIO_NOTE = "audionote";
@@ -46,7 +55,6 @@ public class PointDescription {
 	public static final String POINT_TYPE_MAP_MARKER = "map_marker";
 	public static final String POINT_TYPE_OSM_BUG = "bug";
 	public static final String POINT_TYPE_WORLD_REGION = "world_region";
-	public static final String POINT_TYPE_GPX_ITEM = "gpx_item";
 	public static final String POINT_TYPE_GPX_FILE = "gpx_file";
 	public static final String POINT_TYPE_WORLD_REGION_SHOW_ON_MAP = "world_region_show_on_map";
 	public static final String POINT_TYPE_BLOCKED_ROAD = "blocked_road";
@@ -55,7 +63,9 @@ public class PointDescription {
 	public static final String POINT_TYPE_MAPILLARY_IMAGE = "mapillary_image";
 	public static final String POINT_TYPE_POI_TYPE = "poi_type";
 	public static final String POINT_TYPE_CUSTOM_POI_FILTER = "custom_poi_filter";
+
 	public static final int LOCATION_URL = 200;
+	public static final int OSM_LOCATION_URL = 210;
 	public static final int LOCATION_LIST_HEADER = 201;
 
 
@@ -74,7 +84,7 @@ public class PointDescription {
 			this.name = "";
 		}
 	}
-	
+
 	public PointDescription(String type, String typeName, String name) {
 		this.type = type;
 		this.name = name;
@@ -83,12 +93,12 @@ public class PointDescription {
 			this.name = "";
 		}
 	}
-	
-	public void setTypeName(String typeName){
+
+	public void setTypeName(String typeName) {
 		this.typeName = typeName;
 	}
 
-	public void setName(String name){
+	public void setName(String name) {
 		this.name = name;
 		if (this.name == null) {
 			this.name = "";
@@ -125,13 +135,13 @@ public class PointDescription {
 		if (!Algorithms.isEmpty(typeName)) {
 			if (Algorithms.isEmpty(name)) {
 				return typeName;
-			} else if(addTypeName){
+			} else if (addTypeName) {
 				return typeName.trim() + ": " + name;
 			}
 		}
 		return name;
 	}
-	
+
 	public String getFullPlainName(Context ctx) {
 		if (isLocation()) {
 			return getLocationName(ctx, lat, lon, false);
@@ -165,14 +175,16 @@ public class PointDescription {
 		OsmandSettings settings = ((OsmandApplication) ctx.getApplicationContext()).getSettings();
 		Map<Integer, String> results = new LinkedHashMap<>();
 
-		String latLonString ;
+		String latLonString;
 		String latLonDeg;
 		String latLonMin;
 		String latLonSec;
-		
+
 		String utm = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.UTM_FORMAT);
 		String olc = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.OLC_FORMAT);
 		String mgrs = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.MGRS_FORMAT);
+		String swissGrid = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.SWISS_GRID_FORMAT);
+		String swissGridPlus = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.SWISS_GRID_PLUS_FORMAT);
 
 		try {
 			latLonString = OsmAndFormatter.getFormattedCoordinates(lat, lon, OsmAndFormatter.FORMAT_DEGREES_SHORT);
@@ -193,27 +205,43 @@ public class PointDescription {
 		results.put(OsmAndFormatter.UTM_FORMAT, utm);
 		results.put(OsmAndFormatter.OLC_FORMAT, olc);
 		results.put(OsmAndFormatter.MGRS_FORMAT, mgrs);
+		results.put(OsmAndFormatter.SWISS_GRID_FORMAT, swissGrid);
+		results.put(OsmAndFormatter.SWISS_GRID_PLUS_FORMAT, swissGridPlus);
 
-		int zoom = 17;
-		if (ctx.getMapView() != null) {
-			zoom = ctx.getMapView().getZoom();
+		try {
+			int zoom = ctx.getMapView().getZoom();
+			String latUrl = LocationConvert.convertLatitude(lat, LocationConvert.FORMAT_DEGREES, false);
+			String lonUrl = LocationConvert.convertLongitude(lon, LocationConvert.FORMAT_DEGREES, false);
+			latUrl = latUrl.substring(0, latUrl.length() - 1);
+			lonUrl = lonUrl.substring(0, lonUrl.length() - 1);
+			String httpUrl = "https://osmand.net/map?pin=" + latUrl + "," + lonUrl + "#" + zoom + "/" + latUrl + "/" + lonUrl;
+			results.put(LOCATION_URL, httpUrl);
+
+			if (PluginsHelper.isEnabled(OsmEditingPlugin.class)) {
+				String osmUrl = "https://www.openstreetmap.org/?mlat=" + latUrl + "&mlon=" + lonUrl + "#map=" + zoom + "/" + latUrl + "/" + lonUrl;
+				results.put(OSM_LOCATION_URL, osmUrl);
+			}
+		} catch (RuntimeException e) {
+			log.error("Failed to convert coordinates", e);
 		}
-		final String httpUrl = "https://osmand.net/go?lat=" + (lat) + "&lon=" + (lon) + "&z=" + zoom;
-		results.put(LOCATION_URL, httpUrl);
 
-		int f = settings.COORDINATES_FORMAT.get();
-		
-		if (f == PointDescription.UTM_FORMAT) {
+		int format = settings.COORDINATES_FORMAT.get();
+
+		if (format == PointDescription.UTM_FORMAT) {
 			results.put(LOCATION_LIST_HEADER, utm);
-		} else if (f == PointDescription.OLC_FORMAT) {
+		} else if (format == PointDescription.OLC_FORMAT) {
 			results.put(LOCATION_LIST_HEADER, olc);
-		} else if (f == PointDescription.MGRS_FORMAT) {
+		} else if (format == PointDescription.MGRS_FORMAT) {
 			results.put(LOCATION_LIST_HEADER, mgrs);
-		} else if (f == PointDescription.FORMAT_DEGREES) {
+		} else if (format == PointDescription.SWISS_GRID_FORMAT) {
+			results.put(LOCATION_LIST_HEADER, swissGrid);
+		} else if (format == PointDescription.SWISS_GRID_PLUS_FORMAT) {
+			results.put(LOCATION_LIST_HEADER, swissGridPlus);
+		} else if (format == PointDescription.FORMAT_DEGREES) {
 			results.put(LOCATION_LIST_HEADER, latLonDeg);
-		} else if (f == PointDescription.FORMAT_MINUTES) {
+		} else if (format == PointDescription.FORMAT_MINUTES) {
 			results.put(LOCATION_LIST_HEADER, latLonMin);
-		} else if (f == PointDescription.FORMAT_SECONDS) {
+		} else if (format == PointDescription.FORMAT_SECONDS) {
 			results.put(LOCATION_LIST_HEADER, latLonSec);
 		}
 		return results;
@@ -237,19 +265,15 @@ public class PointDescription {
 	public boolean isLocation() {
 		return POINT_TYPE_LOCATION.equals(type);
 	}
-	
+
 	public boolean isAddress() {
 		return POINT_TYPE_ADDRESS.equals(type);
 	}
-	
+
 	public boolean isWpt() {
 		return POINT_TYPE_WPT.equals(type);
 	}
 
-	public boolean isRte() {
-		return POINT_TYPE_RTE.equals(type);
-	}
-	
 	public boolean isPoi() {
 		return POINT_TYPE_POI.equals(type);
 	}
@@ -298,6 +322,10 @@ public class PointDescription {
 		return POINT_TYPE_GPX.equals(type);
 	}
 
+	public boolean isRoutePoint() {
+		return POINT_TYPE_ROUTE.equals(type);
+	}
+
 	public boolean isGpxFile() {
 		return POINT_TYPE_GPX_FILE.equals(type);
 	}
@@ -309,8 +337,8 @@ public class PointDescription {
 		result = prime * result + ((name == null) ? 0 : name.hashCode());
 		result = prime * result + ((type == null) ? 0 : type.hashCode());
 		result = prime * result + ((typeName == null) ? 0 : typeName.hashCode());
-		result = prime * result + ((lat == 0) ? 0 : new Double(lat).hashCode());
-		result = prime * result + ((lon == 0) ? 0 : new Double(lon).hashCode());
+		result = prime * result + ((lat == 0) ? 0 : Double.valueOf(lat).hashCode());
+		result = prime * result + ((lon == 0) ? 0 : Double.valueOf(lon).hashCode());
 		return result;
 	}
 
@@ -321,21 +349,17 @@ public class PointDescription {
 		if (obj == null || getClass() != obj.getClass())
 			return false;
 		PointDescription other = (PointDescription) obj;
-		if (Algorithms.objectEquals(other.name, name) 
+		return Algorithms.objectEquals(other.name, name)
 				&& Algorithms.objectEquals(other.type, type)
 				&& Algorithms.objectEquals(other.lat, lat)
 				&& Algorithms.objectEquals(other.lon, lon)
-				&& Algorithms.objectEquals(other.typeName, typeName)) {
-			return true;
-		}
-		return false;
+				&& Algorithms.objectEquals(other.typeName, typeName);
 	}
-	
-	
+
+
 	public static String getSimpleName(LocationPoint o, Context ctx) {
 		PointDescription pd = o.getPointDescription(ctx);
 		return pd.getSimpleName(ctx, true);
-//		return o.getPointDescription(ctx).getFullPlainName(ctx, o.getLatitude(), o.getLongitude());
 	}
 
 	public boolean isSearchingAddress(Context ctx) {
@@ -354,9 +378,9 @@ public class PointDescription {
 		if (p == null) {
 			return "";
 		}
-		String tp = p.type ;
-		if(!Algorithms.isEmpty(p.typeName)) {
-			tp = tp +'.' + p.typeName;
+		String tp = p.type;
+		if (!Algorithms.isEmpty(p.typeName)) {
+			tp = tp + '.' + p.typeName;
 		}
 		String res = tp + "#" + p.name;
 		if (!Algorithms.isEmpty(p.iconName)) {
@@ -366,7 +390,7 @@ public class PointDescription {
 	}
 
 	public static PointDescription deserializeFromString(String s, LatLon l) {
-		PointDescription pd = null ;
+		PointDescription pd = null;
 		if (s != null && s.length() > 0) {
 			int in = s.indexOf('#');
 			if (in >= 0) {
@@ -380,7 +404,7 @@ public class PointDescription {
 					name = s.substring(in + 1).trim();
 				}
 				String tp = s.substring(0, in);
-				if(tp.contains(".")) {
+				if (tp.contains(".")) {
 					pd = new PointDescription(tp.substring(0, tp.indexOf('.')), tp.substring(tp.indexOf('.') + 1), name);
 				} else {
 					pd = new PointDescription(tp, name);
@@ -390,22 +414,24 @@ public class PointDescription {
 				}
 			}
 		}
-		if(pd == null) {
+		if (pd == null) {
 			pd = new PointDescription(POINT_TYPE_LOCATION, "");
 		}
-		if(pd.isLocation() && l != null) {
+		if (pd.isLocation() && l != null) {
 			pd.lat = l.getLatitude();
 			pd.lon = l.getLongitude();
 		}
 		return pd;
 	}
-	
+
 	public static final int FORMAT_DEGREES = LocationConvert.FORMAT_DEGREES;
 	public static final int FORMAT_MINUTES = LocationConvert.FORMAT_MINUTES;
 	public static final int FORMAT_SECONDS = LocationConvert.FORMAT_SECONDS;
 	public static final int UTM_FORMAT = LocationConvert.UTM_FORMAT;
 	public static final int OLC_FORMAT = LocationConvert.OLC_FORMAT;
 	public static final int MGRS_FORMAT = LocationConvert.MGRS_FORMAT;
+	public static final int SWISS_GRID_FORMAT = LocationConvert.SWISS_GRID_FORMAT;
+	public static final int SWISS_GRID_PLUS_FORMAT = LocationConvert.SWISS_GRID_PLUS_FORMAT;
 
 	public static String formatToHumanString(Context ctx, int format) {
 		switch (format) {
@@ -421,9 +447,37 @@ public class PointDescription {
 				return "OLC";
 			case LocationConvert.MGRS_FORMAT:
 				return "MGRS";
+			case LocationConvert.SWISS_GRID_FORMAT:
+				return ctx.getString(R.string.navigate_point_format_swiss_grid);
+			case LocationConvert.SWISS_GRID_PLUS_FORMAT:
+				return ctx.getString(R.string.navigate_point_format_swiss_grid_plus);
 			default:
 				return "Unknown format";
 		}
 	}
 
+	@DrawableRes
+	public int getItemIcon() {
+		if (isAddress()) {
+			return R.drawable.ic_action_street_name;
+		} else if (isFavorite()) {
+			return R.drawable.ic_action_favorite;
+		} else if (isLocation()) {
+			return R.drawable.ic_action_marker_dark;
+		} else if (isPoi()) {
+			return R.drawable.ic_action_info_dark;
+		} else if (isGpxFile() || isGpxPoint()) {
+			return R.drawable.ic_action_polygom_dark;
+		} else if (isWpt()) {
+			return R.drawable.ic_action_flag_stroke;
+		} else if (isAudioNote()) {
+			return R.drawable.ic_type_audio;
+		} else if (isVideoNote()) {
+			return R.drawable.ic_type_video;
+		} else if (isPhotoNote()) {
+			return R.drawable.ic_type_img;
+		} else {
+			return R.drawable.ic_action_street_name;
+		}
+	}
 }
